--- a/static/index.html
+++ b/static/index.html
@@ -86,7 +86,7 @@
     <ul class="todo-list" id="todoList"></ul>
 
     <script>
-        const apiUrl = 'http://localhost:8000/todos/';
+        const apiUrl = 'http://146.190.67.159:8000/todos/';
 
         async function fetchTodos() {
             try {
